unpackaged/main/default/objects/Participant__c/Participant__c.object-meta.xml
<CustomObject>
    <label>Participant</label>
    <nameField>
        <label>Participant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Participants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>