unpackaged/main/default/objects/Participant__c/fields/CartItemId__c.field-meta.xml
<CustomField>
    <fullName>CartItemId__c</fullName>
    <label>CartItemId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>