unpackaged/main/default/objects/Participant__c/fields/Civilite__c.field-meta.xml
<CustomField>
    <fullName>Civilite__c</fullName>
    <label>Civilité</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mrs</fullName>
            </value>
            <value>
                <fullName>Ms</fullName>
            </value>
            <value>
                <fullName>Mr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>