unpackaged/main/default/objects/Participant__c/fields/Nom__c.field-meta.xml
<CustomField>
    <fullName>Nom__c</fullName>
    <label>Nom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>