unpackaged/main/default/objects/Participant__c/fields/Prenom__c.field-meta.xml
<CustomField>
    <fullName>Prenom__c</fullName>
    <label>Prénom</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>