unpackaged/main/default/objects/Participant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Civilite__c</columns>
    <columns>Prenom__c</columns>
    <columns>Nom__c</columns>
    <columns>EmailAddress__c</columns>
    <columns>CartItemId__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>